--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-/terraform-infra/.terraform
-/terraform-infra/.terraform.lock.hcl
-/terraform-infra/.env
+/terraform-jenkins-infra/.terraform
+/terraform-jenkins-infra/.terraform.lock.hcl
+/terraform-jenkins-infra/.env
